# categories-game

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/game/: manager.py  models.py  persistence.py  websocket.py
static/: app.js  index.html  manifest.json  service-worker.js  styles.css
