[project]
name = "categories-web-based"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19.0",
    "fastapi>=0.124.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
